# VGM-Creator

./: CMakeLists.txt  README.md  build.bat
src/: app.cpp  app.h  editor.cpp  editor.h  editor_instrument_popup.h  gui.cpp  gui.h  imgui_style.h  instrument.h  log.cpp  log.h  main.cpp
